# appear

./: APEAR_Tutorial.m  APEAR_Tutorial.m~  APEAR_Tutorial_ERP.m  APPEAR_Tutorial.m  APPEAR_V2.m  CNAME  LICENSE  Pulse_Ox.txt  README.md  index.html  runMe_T1000_v2.m
demo/: data_download.txt
eeglab2019_0/: EEGLABB.m  donuts.m  eeglab.prj  fninfo.m  funkyattempt.m  hotdogs.m
eeglab2019_0/functions/studyfunc/: eeglabciplot.m
eeglab2019_0/plugins/Biosig3.3.0/NaN/: .hgtags  DESCRIPTION  INDEX  Makefile  NEWS
eeglab2019_0/plugins/Biosig3.3.0/NaN/.hg/: dirstate  hgrc
eeglab2019_0/plugins/Biosig3.3.0/NaN/doc/: README.TXT
eeglab2019_0/plugins/Biosig3.3.0/NaN/inst/: cat2bin.m  center.m  corrcoef.m  detrend.m  ecdf.m  geomean.m  harmmean.m  kappa.m  load_fisheriris.m  mad.m  meandev.m  quantile.m  range.m  rms.m  sem.m  test_sc.m  train_sc.m  trimean.m  trimmean.m  xcovf.m  xval.m  zscore.m
eeglab2019_0/plugins/Biosig3.3.0/NaN/src/: Makefile.in  config.h.in  configure  configure.ac  linear.cpp  linear.h  linear_model_matlab.c  linear_model_matlab.h  predict.c  str2array.cpp  sumskipnan_mex.cpp  svm.cpp  svm.h  svm_model_matlab.c  svmpredict_mex.cpp  svmtrain_mex.cpp  train.c
eeglab2019_0/plugins/Biosig3.3.0/NaN/test/: test_classify.m  test_xval.m
eeglab2019_0/plugins/ICLabel1.1/: eeg_rpsd.m  eegplugin_iclabel.m  iclabel.m  pop_iclabel.m  run_ICL.m
eeglab2019_0/plugins/dipfit/: README.txt  dipfitdefs.m  eeg_compatlas.m  eegplugin_dipfit.m  pop_dipfit_loreta.m
eeglab2019_0/plugins/fMRIb2.00/: eegplugin_fmrib.m  fmrib_fastr.m  readme.txt
funcs/: APEAR.m  APPEAR.m  APPEAR.m~  AddMarker.m  BC-MR-32.bvef  BC-MR-64.bvef  BrainVision-10-20-Cap31.loc  EDFtoICLabel.m  ICA.m  ICtoICLabel.m  badseg.m  badsegmo.m  cardperiod.m  chlin.m  cmdin.m  cont1.p  conv1.p  dwnsamp.m  eegecgsep.m  findICA.m  fninfo.m  icid.m  icsel.m  importfile.m  linintep.m  lne2pt.m  load_EEG.m  loadbvef.m  mbp.m  power1.m  powerSpectral.m  preproc.m  pulseOx_DetectPeaks.m  pwelchcal.m  readConfig.m  saveEEG.m  segmnt.m  selpk2.m  sortlatency.m  stat.m
(+136 files in other folders)
